--- a/docs/examples/dbus2mqtt_internal_state.yaml
+++ b/docs/examples/dbus2mqtt_internal_state.yaml
@@ -30,7 +30,7 @@ dbus:
 flows:
   - name: "publish internal state"
     triggers:
-      - type: object_added
+      - type: dbus_object_added
       - type: schedule
         interval: {seconds: 5}
     actions:
