--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,11 +31,9 @@ jobs:
           enable-cache: true
           python-version: ${{ matrix.python-version }}
 
-      # - name: "Set up Python"
-      #   uses: actions/setup-python@v5
-      #   with:
-      #     python-version: ${{ matrix.python-version }}
-
       - name: Run tests
-        run: uv run pytest
-        # run: uv run --python ${{ matrix.python-version }} pytest
+        run: uv run pytest --cov=dbus2mqtt
+
+      - name: Coverage report summary
+        run:
+          uv run coverage report --format=markdown >> $GITHUB_STEP_SUMMARY
