--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,5 +35,6 @@ jobs:
         run: uv run pytest --cov=dbus2mqtt
 
       - name: Coverage report summary
+        if: ${{ matrix.python-version == '3.14' }}
         run:
           uv run coverage report --format=markdown >> $GITHUB_STEP_SUMMARY
