--- a/pyproject.toml
+++ b/pyproject.toml
@@ -42,7 +42,7 @@ requires-python = ">=3.10"
 dependencies = [
     "apscheduler==3.11.2",
     "dbus-fast==3.1.2",
-    "jsonargparse==4.45.0",
+    "jsonargparse[ruamel,signatures]==4.45.0",
     "paho-mqtt==2.1.0",
     "jinja2==3.1.6",
     "jinja2-ansible-filters==1.3.2",
@@ -50,6 +50,7 @@ dependencies = [
     "janus>=2.0.0",
     "python-dotenv>=1.1.0",
     "pyyaml>=6.0.2",
+    "docstring-parser>=0.17.0",
 ]
 
 [dependency-groups]
