feat: Introduced signal kwargs

--- a/docs/examples/home_assistant_media_player.yaml
+++ b/docs/examples/home_assistant_media_player.yaml
@@ -46,7 +46,7 @@ dbus:
               signal: Seeked
           conditions:
             # For PropertiesChanged signals, only trigger for org.mpris.MediaPlayer2.Player interfaces
-            - "{{ args[0] == 'org.mpris.MediaPlayer2.Player' if trigger_type == 'dbus_signal' and signal == 'PropertiesChanged' else True }}"
+            - "{{ kwargs.interface_name == 'org.mpris.MediaPlayer2.Player' if trigger_type == 'dbus_signal' and signal == 'PropertiesChanged' else True }}"
           actions:
             - type: context_set
               context:
@@ -54,7 +54,7 @@ dbus:
                 mpris_path: /org/mpris/MediaPlayer2
                 # Some players return stale position if GetAll is executed immediately after a seeked signal.
                 # By storing the seeked position it can be used to override Position below
-                seeked_position: "{{ args[0] if trigger_type == 'dbus_signal' and signal == 'Seeked' else None }}"
+                seeked_position: "{{ kwargs.Position if trigger_type == 'dbus_signal' and signal == 'Seeked' else None }}"
             - type: context_set
               context:
                 player_properties: |
