--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,3 +1,4 @@
+# yaml-language-server: $schema=https://squidfunk.github.io/mkdocs-material/schema.json
 site_name: dbus2mqtt
 site_description: General purpose DBus to MQTT bridge
 site_url: https://jwnmulder.github.io/dbus2mqtt
