--- a/.github/workflows/docker-stable.yml
+++ b/.github/workflows/docker-stable.yml
@@ -26,9 +26,9 @@ jobs:
       - name: Determine supported release versions
         id: supported_release_versions
         run: |
-          SUPPORTED_CYCLES=("0.4" "0.5" "0.6" "0.7" "0.8" "0.9" "1.0" "2.0")
+          SUPPORTED_CYCLES=("0.6" "0.7" "0.8" "0.9" "1.0" "1.1" "1.2" "1.3" "1.4")
 
-          VERSIONS_JSON=$(python3 .github/scripts/release-versions.py "${SUPPORTED_CYCLES[@]}")
+          VERSIONS_JSON=$(python3 tools/release-versions.py "${SUPPORTED_CYCLES[@]}")
 
           # Wrap the output into matrix include
           VERSIONS_MATRIX=$(echo "$VERSIONS_JSON" | jq -c '{include: [.[] | {cycle: .cycle, version: .latestVersion, isLatestStable: .isLatestStable}]}')
