--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -59,21 +59,27 @@ repos:
 
   - repo: local
     hooks:
+      - id: generate_json_schema
+        name: generate_json_schema
+        # Ensures config.schema.json is always up-to-date
+        entry: bash -c 'uv run --active tools/generate_schema.py > schemas/config.schema.json'
+        language: python
+        additional_dependencies: ["uv"]
+        always_run: true
+        pass_filenames: false
+
       - id: check-mkdocs
         name: check-mkdocs
         entry: uv run --active mkdocs build --strict
         language: python
-        additional_dependencies:
-          - uv
+        additional_dependencies: ["uv"]
         always_run: true
         pass_filenames: false
-  - repo: local
-    hooks:
+
       - id: deptry
         name: deptry
         entry: uv run --active deptry .
         language: python
-        additional_dependencies:
-          - uv
+        additional_dependencies: ["uv"]
         always_run: true
         pass_filenames: false
